<resources>
    <string name="app_name">Login</string>
    <string name="sing_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="full_name">Fullname</string>
    <string name="user_name">Username</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string-array name="gender_options">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>

</resources>
